--- a/visionlibrary/src/main/res/values/attrs.xml
+++ b/visionlibrary/src/main/res/values/attrs.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <declare-styleable name="BarcodeReader">
+    <declare-styleable name="BarcodeReaderView">
         <attr name="auto_focus" format="boolean" />
         <attr name="use_flash" format="boolean" />
         <attr name="draw_rect" format="boolean" />
+        <attr name="draw_text" format="boolean" />
     </declare-styleable>
 </resources>
